--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,11 +24,15 @@
 
                 {{ content }}
 
+            <div class="bio">
+              <h2>Bio</h2>
+              <p>Christopher Meiklejohn is a Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a> and a graduate student in the <a href="http://cs.brown.edu">Department of Computer Science</a> at <a href="http://www.brown.edu">Brown University.</a></p>
+            </div>
+
             <div class="footer">
               <div class="contact">
                 <p>
                   Christopher Meiklejohn<br />
-                  Software Engineer<br />
                   chris@basho.com
                 </p>
               </div>
