--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
 
+        <link href='http://fonts.googleapis.com/css?family=Noto+Sans:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
