--- a/css/main.css
+++ b/css/main.css
@@ -14,7 +14,7 @@ html, body { height: 100%; }
 
 body {
   background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
+  font-family: 'Noto Sans', sans-serif;
   font-size: small;
   text-align: center;
 }
