Add FRP blog post.

--- a/css/main.css
+++ b/css/main.css
@@ -19,6 +19,8 @@ body {
   text-align: center;
 }
 
+.youtube-player { display: block; margin: 0 auto; }
+
 h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
