Add mailing address.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,14 @@
               </div>
               <div class="contact">
                 <p>
+                Box 1910, Computer Science Department<br />
+                Brown University<br />
+                Providence, RI 02912<br />
+                401-863-7600<br />
+                </p>
+              </div>
+              <div class="contact">
+                <p>
                   <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                   <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
                 </p>
