--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,7 @@ ul.posts span {
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
+  overflow-x: auto;
 }
 
 #post ul, #post ol {
