--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
-              <a class="extra" href="/map.html">summer tour 2013</a>
+              <a class="extra" href="/map.html">map</a>
             </div>
 
                 {{ content }}
