--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,6 +6,11 @@ layout: default
 
 <div id="post">
 {{ content }}
+
+  <p>
+    If you like this article, please consider supporting my writing on
+    <a href="https://www.gittip.com/cmeik/">gittip</a>.
+  </p>
 </div>
 
 <div id="disqus_thread"></div>
