--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
               <a class="extra" href="/distributed/systems/2013/07/12/readings-in-distributed-systems.html">readings</a>
+              <a class="extra" href="/publications.html">publications</a>
             </div>
 
                 {{ content }}
