--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
             <div class="bio">
               <h2>Bio</h2>
-              <p>Christopher Meiklejohn is a Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a> and a graduate student in the <a href="http://cs.brown.edu">Department of Computer Science</a> at <a href="http://www.brown.edu">Brown University.</a></p>
+              <p>Christopher Meiklejohn is a Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a> and a graduate student in the <a href="http://www.cc.gatech.edu">College of Computing at Georgia Tech.</a></p>
             </div>
 
             <div class="footer">
@@ -42,12 +42,6 @@
                 </p>
               </div>
               <div class="contact">
-                <p>
-                Box 1910, Computer Science Department<br />
-                Brown University<br />
-                Providence, RI 02912<br />
-                401-863-7600<br />
-                </p>
               </div>
               <div class="contact">
                 <p>
