--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
             <div class="bio">
               <h2>Bio</h2>
-              <p>Christopher Meiklejohn is a Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a> and a graduate student in the <a href="http://www.cc.gatech.edu">College of Computing at Georgia Tech.</a></p>
+              <p>Christopher Meiklejohn is a Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a> and a graduate student in the <a href="http://www.cc.gatech.edu">College of Computing</a> at <a href="http://www.gatech.edu">Georgia Tech.</a></p>
             </div>
 
             <div class="footer">
@@ -41,8 +41,7 @@
                   chris@basho.com
                 </p>
               </div>
-              <div class="contact">
-              </div>
+              <div class="contact">&nbsp;</div>
               <div class="contact">
                 <p>
                   <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
