--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,12 +38,7 @@
               <div class="contact">
                 <p>
                   Christopher Meiklejohn<br />
-                  chris@basho.com
-                </p>
-              </div>
-              <div class="contact">&nbsp;</div>
-              <div class="contact">
-                <p>
+                  chris@basho.com<br />
                   <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                   <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
                 </p>
