Change to senior.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 
             <div class="bio">
               <h2>Bio</h2>
-              <p>Christopher Meiklejohn is a Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a> and a graduate student in the <a href="http://www.cc.gatech.edu">College of Computing</a> at <a href="http://www.gatech.edu">Georgia Tech.</a></p>
+              <p>Christopher Meiklejohn is a Senior Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a> and a graduate student in the <a href="http://www.cc.gatech.edu">College of Computing</a> at <a href="http://www.gatech.edu">Georgia Tech.</a></p>
             </div>
 
             <div class="footer">
