--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,8 @@
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
-              <a class="extra" href="/distributed/systems/2013/07/12/readings-in-distributed-systems.html">readings</a>
+              <a class="extra" href="/distributed/systems/2013/07/12/readings-in-distributed-systems.html">distributed systems</a>
+              <a class="extra" href="/crdt/2014/07/22/readings-in-crdts.html">CRDTs</a>
               <a class="extra" href="/publications.html">publications</a>
             </div>
 
