Format front-page with descriptions.

--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,11 @@ table {
   font: 100%;
 }
 
+.container {
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
 /*****************************************************************************/
 /*
 /* Home
