--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
               <a class="extra" href="/publications.html">publications</a>
-              <a class="extra" href="/talks.html">talks</a>
+              <a class="extra" href="/videos.html">videos</a>
             </div>
 
                 {{ content }}
