--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ ul.posts span {
 
 .site {
   font-size: 115%;
-  text-align: justify;
+  text-align: left;
   width: 40em;
   margin: 3em auto 2em;
   line-height: 1.5em;
