--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ html, body { height: 100%; }
 body {
   background-color: #FFF;
   font-family: 'Lora', serif;
+  font-size: medium;
   text-align: center;
 }
 
@@ -60,6 +61,10 @@ table {
 .container {
   margin-left: 10px;
   margin-right: 10px;
+}
+
+@media screen and (max-device-width: 480px){
+  body { -webkit-text-size-adjust: none; }
 }
 
 /*****************************************************************************/
