--- a/css/main.css
+++ b/css/main.css
@@ -173,7 +173,7 @@ ul.posts span {
 #post pre {
   border: 1px solid #ddd;
   background-color: #eef;
-  padding: 0 .4em;
+  padding-left: .4em;
   overflow-x: auto;
 }
 
