Add link to CV.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
               <a class="extra" href="/">home</a>
               <a class="extra" href="/publications.html">publications</a>
               <a class="extra" href="/videos.html">videos</a>
+              <a class="extra" href="ChristopherMeiklejohn_CV_2014.pdf">CV</a>
             </div>
 
                 {{ content }}
