--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,8 @@
               <h2>Bio</h2>
               <p>Christopher Meiklejohn is a Senior Software Engineer
               with <a href="http://basho.com">Basho Technologies,
-                Inc.</a> and a contributing member of the European research project, <a href="https://syncfree.lip6.fr">SyncFree</a>.</p>
+                Inc.</a> and contributes to the European research
+              project on large scale computation without synchronization, <a href="https://syncfree.lip6.fr">SyncFree</a>.</p>
             </div>
 
             <div class="footer">
