--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
               <a class="extra" href="/research.html">research</a>
               <a class="extra" href="/publications.html">publications</a>
               <a class="extra" href="/videos.html">videos</a>
-              <a class="extra" href="/ChristopherMeiklejohn_CV_2014.pdf">CV</a>
+              <a class="extra" href="/ChristopherMeiklejohn_CV_2014.pdf">curriculum vitae</a>
             </div>
 
                 {{ content }}
