--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,7 @@
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
+              <a class="extra" href="http://lasp-lang.org">lasp</a>
               <a class="extra" href="/research.html">research</a>
               <a class="extra" href="/publications.html">publications</a>
               <a class="extra" href="/videos.html">videos</a>
