--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,22 +32,17 @@
 
                 {{ content }}
 
-            <div class="bio">
-              <h2>Bio</h2>
-              <p>Christopher Meiklejohn is a Senior Software Engineer
-              with <a href="http://basho.com">Basho Technologies,
-                Inc.</a> and contributes to the European research
-              project on large scale computation without synchronization, <a href="https://syncfree.lip6.fr">SyncFree</a>.</p>
-            </div>
-
             <div class="footer">
               <div class="contact">
-                <p>
-                  Christopher Meiklejohn<br />
-                  <a href="mailto:chris@basho.com">chris@basho.com</a><br />
-                  <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
-                  <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
-                </p>
+                <img src="me.jpg" class="photo" />
+                <div class="bio">
+                  <p>
+                    Christopher Meiklejohn is a Senior Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a></br>
+                    <a href="mailto:chris@basho.com">chris@basho.com</a><br />
+                    <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
+                    <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
+                    </p>
+                </div>
               </div>
             </div>
           </div>
