Fix link to image.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
             <div class="footer">
               <div class="contact">
-                <img src="me.jpg" class="photo" />
+                <img src="/me.jpg" class="photo" />
                 <div class="bio">
                   <p>
                     Christopher Meiklejohn is a Senior Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a></br>
