--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,8 @@
                 <div class="bio">
                   <p>
                     Christopher Meiklejohn is a Senior Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a></br>
-                    <a href="mailto:chris@basho.com">chris@basho.com</a><br />
+                    <a
+                      href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                     <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
                     </p>
