--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
                 <img src="/me.jpg" class="photo" />
                 <div class="bio">
                   <p>
-                    Christopher Meiklejohn is a Senior Software Engineer with <a href="http://basho.com">Basho Technologies, Inc.</a></br>
+                    Christopher Meiklejohn is a computer scientist.</br>
                     <a
                       href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
