--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
               <a class="extra" href="/research.html">research</a>
               <a class="extra" href="/publications.html">publications</a>
               <a class="extra" href="/videos.html">videos</a>
+              <a class="extra" href="http://github.com/cmeiklejohn">code</a>
               <a class="extra" href="/ChristopherMeiklejohn_CV_2015.pdf">curriculum vitae</a>
             </div>
 
