--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,9 @@
                       href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                     <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
+                    <br/>
+                    <a href="http://unaffiliated.academy">unaffiliated.academy</a><br />
+                    <a href="http://academic.af">academic.af</a><br />
                     </p>
                 </div>
               </div>
