Write a little thing on Promises.

--- a/css/main.css
+++ b/css/main.css
@@ -228,3 +228,28 @@ td {
   padding-bottom: 30px;
   border-bottom: 4px solid #eee;
 }
+
+.citation {
+  font-style: italic;
+}
+
+.citation::before {
+    content: "[";
+}
+
+.citation::after {
+    content: "]";
+}
+
+#refs {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  margin-top: 20px;
+}
+
+hr {
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
