--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,10 +43,10 @@
 
             <div class="footer">
               <div class="contact">
-                <img src="/me.jpg" class="photo" />
+                <img src="/me.jpg" alt="My Photo!" class="photo" />
                 <div class="bio">
                   <p>
-                    Christopher Meiklejohn is a computer scientist.</br>
+                    Christopher Meiklejohn is a Ph.D. student at the <a href="https://www.uclouvain.be/index.html">Université catholique de Louvain</a>.</br>
                     <a
                       href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
