--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,8 +50,9 @@
                      href="https://www.uclouvain.be/index.html">Université
                      catholique de Louvain</a>.<br/>
                     <br/>
-                    <a
-                      href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
+                    <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
+                    <a href="mailto:christopher.meiklejohn@uclouvain.be">christopher.meiklejohn@uclouvain.be</a><br />
+                    <br/>
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                     <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
                     <br/>
