--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,6 +53,7 @@
                     <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
                     <a href="mailto:christopher.meiklejohn@uclouvain.be">christopher.meiklejohn@uclouvain.be</a><br />
                     <br/>
+                    <a href="http://emjd-dc.eu/Christopher-Meiklejohn/">emjd-dc.eu/Christopher-Meiklejohn/</a><br />
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                     <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
                     <br/>
