--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,10 @@
                 <img src="/me.jpg" alt="My Photo!" class="photo" />
                 <div class="bio">
                   <p>
-                    Christopher Meiklejohn is a Ph.D. student at the <a
+                    Christopher Meiklejohn is a Erasmus Mundus doctoral
+                    student at both the <a
                      href="https://www.uclouvain.be/index.html">Université
-                     catholique de Louvain</a>.<br/>
+                     catholique de Louvain</a> and <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.<br/>
                     <br/>
                     <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
                     <a href="mailto:christopher.meiklejohn@uclouvain.be">christopher.meiklejohn@uclouvain.be</a><br />
