Remove extra language.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
                 <div class="bio">
                   <p>
                     Christopher Meiklejohn is a Erasmus Mundus doctoral
-                    student at both the <a
+                    student at <a
                      href="https://www.uclouvain.be/index.html">Université
                      catholique de Louvain</a> and <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.<br/>
                     <br/>
