Add courses to homepage.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
               <a class="extra" href="/">home</a>
               <a class="extra" href="http://lasp-lang.org">lasp</a>
               <a class="extra" href="/research.html">research</a>
+              <a class="extra" href="/courses.html">courses</a>
               <a class="extra" href="/publications.html">publications</a>
               <a class="extra" href="/videos.html">videos</a>
               <a class="extra" href="http://github.com/cmeiklejohn">code</a>
