--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,16 +48,14 @@
                 <div class="bio">
                   <p>
                     Christopher Meiklejohn is a Erasmus Mundus doctoral
-                    student at <a
-                     href="https://www.uclouvain.be/index.html">Université
-                     catholique de Louvain</a> and <a href="https://tecnico.ulisboa.pt/en/">Instituto Superior Técnico</a>.<br/>
+                    student at the <a href="http://www.isri.cmu.edu/">the Institute for Software Research</a> at <a href="http://cmu.edu">Carnegie Mellon University.</a>
+                    <br/>
                     <br/>
                     <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
-                    <a href="mailto:christopher.meiklejohn@uclouvain.be">christopher.meiklejohn@uclouvain.be</a><br />
                     <br/>
-                    <a href="http://emjd-dc.eu/Christopher-Meiklejohn/">emjd-dc.eu/Christopher-Meiklejohn</a><br />
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                     <a href="http://twitter.com/cmeik/">twitter.com/cmeik</a><br />
+                    <a href="http://meiklesoft.net/">meiklesoft.net</a><br />
                     </p>
                 </div>
               </div>
