--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
                 <img src="/me.jpg" alt="My Photo!" class="photo" />
                 <div class="bio">
                   <p>
-                    Christopher Meiklejohn is a Ph.D. student at the <a href="http://www.isri.cmu.edu/">the Institute for Software Research</a> at <a href="http://cmu.edu">Carnegie Mellon University.</a>
+                    Christopher Meiklejohn is a Ph.D. student at the <a href="http://www.isri.cmu.edu/">Institute for Software Research</a> at <a href="http://cmu.edu">Carnegie Mellon University.</a>
                     <br/>
                     <br/>
                     <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
