--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,6 +33,7 @@
             <div class="header">
               <h1 class="title"><a href="/">{{ site.name }}</a></h1>
               <a class="extra" href="/">home</a>
+              <a class="extra" href="http://partisan.cloud">partisan</a>
               <a class="extra" href="http://lasp-lang.org">lasp</a>
               <a class="extra" href="/research.html">research</a>
               <a class="extra" href="/courses.html">courses</a>
