--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,7 @@
                     <br/>
                     <br/>
                     <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
+                    <a href="mailto:cmeiklej@andrew.cmu.edu">cmeiklej@andrew.cmu.edu</a><br />
                     <br/>
                     <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                     <a href="http://meiklesoft.net/">meiklesoft.net</a><br />
