--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,15 @@
                     <br/>
                     <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
                     <a href="mailto:cmeiklej@andrew.cmu.edu">cmeiklej@andrew.cmu.edu</a><br />
+                      <br />
+                      <a href="http://filibuster.cloud">filibuster.cloud</a><br />
+                      <a href="http://partisan.dev">partisan.dev</a><br />
                     <br/>
-                    <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
+                      <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
+                      <a href="http://github.com/filibuster-testing/">github.com/filibuster-testing</a><br />
+                      <br />
+                      <a href="http://github.com/lasp-lang/">github.com/lasp-lang</a><br />
+                      <a href="http://github.com/cmeiklejohn/">github.com/cmeiklejohn</a><br />
                     <a href="http://meiklesoft.net/">meiklesoft.net</a><br />
                     </p>
                 </div>
