--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
                 <img src="/me.jpg" alt="My Photo!" class="photo" />
                 <div class="bio">
                   <p>
-                    Christopher S. Meiklejohn has a Software Engineering Ph.D. from the <a href="https://s3d.cmu.edu">Software and Societal Systems Department</a> at the <a href="https://www.scs.cmu.edu">School of Computer Science</a> of <a href="http://cmu.edu">Carnegie Mellon University.</a>
+                    Christopher S. Meiklejohn has a Ph.D. in Software Engineering from the <a href="https://s3d.cmu.edu">Software and Societal Systems Department</a> at the <a href="https://www.scs.cmu.edu">School of Computer Science</a> of <a href="http://cmu.edu">Carnegie Mellon University.</a>
                     <br/>
                     <br/>
                     <a href="mailto:christopher.meiklejohn@gmail.com">christopher.meiklejohn@gmail.com</a><br />
